--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,11 @@
   </head>
   <body>
     <h1>My Webpage</h1>
+    <div>
+      <svg width="1000" height="1000">
+
+      </svg>
+    </div>
     <script src="./index.js"></script>
   </body>
 </html>
