--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8">
     <title>My Title</title>
+    <link rel="stylesheet" href="index.css">
   </head>
   <body>
     <h1>My Webpage</h1>
-    <div>
-      <svg width="1000" height="1000">
-
-      </svg>
+    <div id="final1">
+      <input type="text" id="zipChosen">
+      <button id="zipSubmit">submit</button>
+      <div id="map"></div>
     </div>
     <script src="./index.js"></script>
   </body>
