--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,17 @@
   <body>
     <h1>My Webpage</h1>
     <div id="final1">
+      Enter zip code
       <input type="text" id="zipChosen">
+      Choose radius
+      <select id="radiusSelect">
+        <option value="3">3 miles</option>
+        <option value="3">5 miles</option>
+        <option value="3">10 miles</option>
+      </select>
       <button id="zipSubmit">submit</button>
+      <br>
+      <button id="chooseReset">reset</button>
       <div id="map"></div>
     </div>
     <script src="./index.js"></script>
