finish fullpage template

--- a/src/index.html
+++ b/src/index.html
@@ -4,23 +4,30 @@
     <meta charset="UTF-8">
     <title>My Title</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="fullpage.css">
   </head>
   <body>
     <h1>My Webpage</h1>
-    <div id="final1">
-      Enter zip code
-      <input type="text" id="zipChosen">
-      Choose radius
-      <select id="radiusSelect">
-        <option value="3">3 miles</option>
-        <option value="3">5 miles</option>
-        <option value="3">10 miles</option>
-      </select>
-      <button id="zipSubmit">submit</button>
-      <br>
-      <button id="chooseReset">reset</button>
-      <div id="map"></div>
+    <div id="fullpage">
+      <div class="section""> somesection </div>
+      <div class="section""> somesection </div>
+      <div class="section""> somesection </div>
+      <div class="section""> somesection </div>
+      <div class="section" id="final1"">
+        Enter zip code
+        <input type="text" id="zipChosen">
+        Choose radius
+        <select id="radiusSelect">
+          <option value="3">3 miles</option>
+          <option value="3">5 miles</option>
+          <option value="3">10 miles</option>
+        </select>
+        <button id="zipSubmit">submit</button>
+        <br>
+        <button id="chooseReset">reset</button>
+        <div id="map"></div>
+      </div>
     </div>
-    <script src="./index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
