fix the distance radius

--- a/src/index.html
+++ b/src/index.html
@@ -9,18 +9,18 @@
   <body>
     <h1>My Webpage</h1>
     <div id="fullpage">
-      <div class="section""> somesection </div>
-      <div class="section""> somesection </div>
-      <div class="section""> somesection </div>
-      <div class="section""> somesection </div>
-      <div class="section" id="final1"">
+      <div class="section"> somesection </div>
+      <div class="section"> somesection </div>
+      <div class="section"> somesection </div>
+      <div class="section"> somesection </div>
+      <div class="section" id="final1">
         Enter zip code
         <input type="text" id="zipChosen">
         Choose radius
         <select id="radiusSelect">
           <option value="3">3 miles</option>
-          <option value="3">5 miles</option>
-          <option value="3">10 miles</option>
+          <option value="5">5 miles</option>
+          <option value="10">10 miles</option>
         </select>
         <button id="zipSubmit">submit</button>
         <br>
