--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,20 @@
   <body>
     <h1>My Webpage</h1>
     <div id="fullpage">
-      <div class="section"> somesection </div>
-      <div class="section"> somesection </div>
-      <div class="section"> somesection </div>
-      <div class="section"> somesection </div>
-      <div class="section"> somesection </div>
+      <div class="section"> <img src="images/01-GDP-Center.png" alt="some_text" width="1000"> </div>
+      <div class="section"> <img src="images/02-Seattle-GDP-Detail.png" alt="some_text" width="600"> </div>
+      <div class="section">
+        <img src="images/03-1-zipcode-compare-pt.1.png" alt="some_text" width="1000">
+        <img src="images/03-2-zipcode-comparison.png" alt="some_text" width="800">
+      </div>
+      <div class="section"> <img src="images/04-Preference-Selection.png" alt="some_text" width="1000"> </div>
+      <div class="section"> <img src="images/05-Preference-Result.png" alt="some_text" width="700"> </div>
+      <div class="section"> <img src="images/06-GDP-Timeline-concept-design.png" alt="some_text" width="1500"> </div>
+      <div class="section">
+        <img src="images/07-1-select-facility-restaurant.png" alt="some_text" width="300">
+        <img src="images/07-2-Restaurant-Yelp.png" alt="some_text" width="500">
+      </div>
+      <div class="section"> <img src="images/08-crime-rate-and-type.png" alt="some_text" width="1000"> </div>
 <!--      <div class="section" id="final1">-->
 <!--        Enter zip code-->
 <!--        <input type="text" id="zipChosen">-->
