--- a/src/index.html
+++ b/src/index.html
@@ -14,18 +14,25 @@
       <div class="section"> somesection </div>
       <div class="section"> somesection </div>
       <div class="section" id="final1">
-        Enter zip code
-        <input type="text" id="zipChosen">
-        Choose radius
-        <select id="radiusSelect">
-          <option value="3">3 miles</option>
-          <option value="5">5 miles</option>
-          <option value="10">10 miles</option>
-        </select>
-        <button id="zipSubmit">submit</button>
-        <br>
-        <button id="chooseReset">reset</button>
-        <div id="map"></div>
+        <div class="row">
+          Enter zip code
+          <input type="text" id="zipChosen">
+          Choose radius
+          <select id="radiusSelect">
+            <option value="3">3 miles</option>
+            <option value="5">5 miles</option>
+            <option value="10">10 miles</option>
+          </select>
+          <button id="zipSubmit">submit</button>
+          <br>
+          <button id="chooseReset">reset</button>
+        </div>
+        <div class="column">
+          <div id="map"></div>
+        </div>
+        <div class="column">
+          <div id="compare"></div>
+        </div>
       </div>
     </div>
     <script src="index.js"></script>
