finish drag and drop list for the second final graph

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,11 @@
           <div id="compare"></div>
         </div>
       </div>
+      <div class="section" id="final2">
+        <div id="priority-list"></div>
+      </div>
     </div>
     <script src="index.js"></script>
+    <script src="bestZip.js"></script>
   </body>
 </html>
