--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,11 @@
       <div class="section"> somesection </div>
       <div class="section"> somesection </div>
       <div class="section"> somesection </div>
-      <div class="section"> somesection </div>
+      <div class="section" id="schoolMap">
+        <div class="column">
+        <div id="mapSchool"></div>
+      </div>
+      </div>
       <div class="section" id="final1">
         <div class="row">
           Enter zip code
