--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,10 @@
       <div class="section" id="schoolMap">
         <div class="column">
         <div id="mapSchool"></div>
-      </div>
+        </div>
+        <div class="column">
+          <div id="drawSchool"></div>
+        </div>
       </div>
       <div class="section" id="final1">
         <div class="row">
