--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,14 @@
     <div id="fullpage">
       <div class="section"> somesection </div>
       <div class="section"> somesection </div>
-      <div class="section"> somesection </div>
+      <div class="section" id="gdp">
+        <div class="row">
+          Seattle-The correlation between GDP & Population
+        </div>
+        <div class="column">
+          <div id="gdpMap"></div>
+        </div>
+      </div>
       <div class="section" id="schoolMap">
         <div class="column">
         <div id="mapSchool"></div>
