--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,12 @@
       <div class="section"> somesection </div>
       <div class="section" id="gdp">
         <div class="row">
-          Seattle-The correlation between GDP & Population
+          <select id="citySelect">
+            <option value="seattle">Seattle</option>
+            <option value="sanfan">San Francisco</option>
+            <option value="newyork">New York</option>
+            <option value="losang">Los Angeles</option>
+          </select>
         </div>
         <div class="column">
           <div id="gdpMap"></div>
