gdp basically complete

--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,10 @@
       <div class="section" id="gdp">
         <div class="row">
           <select id="citySelect">
-            <option value="seattle">Seattle</option>
-            <option value="sanfan">San Francisco</option>
-            <option value="newyork">New York</option>
-            <option value="losang">Los Angeles</option>
+            <option value="Seattle" selected>Seattle</option>
+            <option value="San Francisco">San Francisco</option>
+            <option value="New York">New York</option>
+            <option value="Los Angeles">Los Angeles</option>
           </select>
         </div>
         <div class="column">
