--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
         </div>
       </div>
       <div class="section" id="final1">
-        <div class="row">
+        <div class="leftcolumn">
           Enter zip code
           <input type="text" id="zipChosen">
           Choose radius
@@ -42,11 +42,9 @@
           <button id="zipSubmit">submit</button>
           <br>
           <button id="chooseReset">reset</button>
-        </div>
-        <div class="column">
           <div id="map"></div>
         </div>
-        <div class="column">
+        <div class="rightcolumn">
           <div id="compare"></div>
         </div>
       </div>
