--- a/src/index.html
+++ b/src/index.html
@@ -39,10 +39,38 @@
         </div>
       </div>
       <div class="section" id="final2">
-        <div id="priority-list"></div>
+        <div class="three-column">
+          <div id="priority-list">
+            <div class="col">
+              <h4>options</h4>
+              <div id="leftList" class="list-group">
+                <div data-id="price" class="list-group-item">price</div>
+                <div data-id="crime" class="list-group-item">crime</div>
+                <div data-id="company" class="list-group-item">company</div>
+                <div data-id="grocery" class="list-group-item">grocery</div>
+                <div data-id="school" class="list-group-item">school</div>
+                <div data-id="transportation" class="list-group-item">transportation</div>
+                <div data-id="rest" class="list-group-item">restaurant</div>
+              </div>
+            </div>
+            <div class="col">
+              <h4>preferences</h4>
+              <div id="rightList" class="list-group"></div>
+            </div>
+            
+          </div>
+        </div>
+        <button type="button" id="search">search</button>
+        <div class="three-column">
+          <div id="bestZipMap"></div>
+        </div>
+        <div class="three-column">
+
+          <div id="bestZipAnalysis">
+          </div>
+        </div>
       </div>
     </div>
     <script src="index.js"></script>
-    <script src="bestZip.js"></script>
   </body>
 </html>
