--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,6 @@
   <body>
     <div id="fullpage">
       <div class="section"> somesection </div>
-      <div class="section"> somesection </div>
       <div class="section" id="gdp">
         <div class="row">
           <select id="citySelect">
@@ -21,6 +20,16 @@
         </div>
         <div id="gdpMap"></div>
       </div>
+
+      <div class="section" id="groceryMap">
+        <div class="column">
+          <div id="mapGrocery"></div>
+        </div>
+        <div class="column">
+          <div id="drawGrocery"></div>
+        </div>
+      </div>
+
       <div class="section" id="schoolMap">
         <div class="column">
         <div id="mapSchool"></div>
