--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,15 @@
         <div id="gdpMap"></div>
       </div>
 
+      <div class="section" id="restaurantMap">
+        <div class="column">
+          <div id="mapRestaurant"></div>
+        </div>
+        <div class="column">
+          <div id="drawRestaurant"></div>
+        </div>
+      </div>
+
       <div class="section" id="groceryMap">
         <div class="column">
           <div id="mapGrocery"></div>
