add all sub-maps

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,33 @@
         <div id="gdpMap"></div>
       </div>
 
+      <div class="section" id="companyMap">
+        <div class="column">
+          <div id="mapCompany"></div>
+        </div>
+        <div class="column">
+          <div id="drawCompany"></div>
+        </div>
+      </div>
+
+      <div class="section" id="busMap">
+        <div class="column">
+          <div id="mapBus"></div>
+        </div>
+        <div class="column">
+          <div id="drawBus"></div>
+        </div>
+      </div>
+
+      <div class="section" id="crimeMap">
+        <div class="column">
+          <div id="mapCrime"></div>
+        </div>
+        <div class="column">
+          <div id="drawCrime"></div>
+        </div>
+      </div>
+
       <div class="section" id="restaurantMap">
         <div class="column">
           <div id="mapRestaurant"></div>
