improve bestZip user experience

--- a/src/index.html
+++ b/src/index.html
@@ -99,17 +99,17 @@
             <div class="col">
               <h4>options</h4>
               <div id="leftList" class="list-group">
-                <div data-id="price" class="list-group-item">price</div>
-                <div data-id="crime" class="list-group-item">crime</div>
-                <div data-id="company" class="list-group-item">company</div>
-                <div data-id="grocery" class="list-group-item">grocery</div>
-                <div data-id="school" class="list-group-item">school</div>
-                <div data-id="transportation" class="list-group-item">transportation</div>
-                <div data-id="rest" class="list-group-item">restaurant</div>
+                <div data-id="price" class="list-group-item">Low housing price</div>
+                <div data-id="crime" class="list-group-item">Low crime rate</div>
+                <div data-id="company" class="list-group-item">More companies</div>
+                <div data-id="grocery" class="list-group-item">More grocery stores</div>
+                <div data-id="school" class="list-group-item">More schools</div>
+                <div data-id="transportation" class="list-group-item">More bus/link stations</div>
+                <div data-id="rest" class="list-group-item">More restaurants</div>
               </div>
             </div>
             <div class="col">
-              <h4>preferences</h4>
+              <h4>preferences <b>(high to low)</b></h4>
               <div id="rightList" class="list-group"></div>
             </div>
             
