update housing price source

--- a/src/index.html
+++ b/src/index.html
@@ -263,6 +263,13 @@
             </p>
 
             <p style="font-weight: 400; font-size: 20px;">
+              Housing price data:
+            </p>
+            <p>
+              Average housing price by zip code and by city: <a href="https://www.zillow.com/research/data/" target="_blank">https://www.zillow.com/research/data/</a></br>
+            </p>
+
+            <p style="font-weight: 400; font-size: 20px;">
               Infrastructure:
           </p>
             <p>
