update onhover effect

--- a/src/index.html
+++ b/src/index.html
@@ -199,7 +199,7 @@
               </div>
             </div>
             <div class="col">
-              <h4>Preferences <b>(high to low)</b></h4>
+              <h4>Preferences <i>(high to low)</i></h4>
               <div id="rightList" class="list-group"></div>
             </div>
             
