Adjusted margin for multi-factor map/graphs

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
         
         <div class = "row" style="height:50px">
           <div class="header">
-            <div class="title" style="margin-left: 1.5%; float: left; font-size: 56px; font-weight: 300;">Seattle Housing Prices</div>
+            <div class="title" style="margin-left: 1.5%; margin-top: 1.5%; float: left; font-size: 56px; font-weight: 300;">Seattle Housing Prices</div>
             <div class="subtitle" style="float: left; padding-top: 36px; padding-left: 60px; opacity: .7; font-size:18px">An exploration of Seattle's housing prices</div>
           </div>
         </div>
@@ -62,55 +62,55 @@
       </div>
 
       <div class="section" id="companyMap">
-        <div class="column">
+        <div class="column" style="margin-top: 10%;">
           <div id="mapCompany"></div>
         </div>
-        <div class="column">
+        <div class="column" style="margin-top: 6%;">
           <div id="drawCompany"></div>
         </div>
       </div>
 
       <div class="section" id="busMap">
-        <div class="column">
+        <div class="column" style="margin-top: 10%;">
           <div id="mapBus"></div>
         </div>
-        <div class="column">
+        <div class="column" style="margin-top: 6%;">
           <div id="drawBus"></div>
         </div>
       </div>
 
       <div class="section" id="crimeMap">
-        <div class="column">
+        <div class="column" style="margin-top: 10%;">
           <div id="mapCrime"></div>
         </div>
-        <div class="column">
+        <div class="column" style="margin-top: 6%;">
           <div id="drawCrime"></div>
         </div>
       </div>
 
       <div class="section" id="restaurantMap">
-        <div class="column">
+        <div class="column" style="margin-top: 10%;">
           <div id="mapRestaurant"></div>
         </div>
-        <div class="column">
+        <div class="column" style="margin-top: 6%;">
           <div id="drawRestaurant"></div>
         </div>
       </div>
 
       <div class="section" id="groceryMap">
-        <div class="column">
+        <div class="column" style="margin-top: 10%;">
           <div id="mapGrocery"></div>
         </div>
-        <div class="column">
+        <div class="column" style="margin-top: 6%;">
           <div id="drawGrocery"></div>
         </div>
       </div>
 
       <div class="section" id="schoolMap">
-        <div class="column">
+        <div class="column" style="margin-top: 10%;">
         <div id="mapSchool"></div>
         </div>
-        <div class="column">
+        <div class="column" style="margin-top: 6%;">
           <div id="drawSchool"></div>
         </div>
       </div>
