--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
             <div class="title" style="margin-left: 1.5%; margin-top: 1.5%; float: left; font-size: 56px; font-weight: 300;">Seattle Housing Prices</div>
             <div class="subtitle" style="float: left; padding-top: 36px; padding-left: 60px; opacity: .7; font-size:18px">An exploration of Seattle's housing prices</div>
           </div>
+          <img src="Seattle.jpg" id="bg" alt="">
         </div>
         
         <div class="row" style="width: 60%; margin-left: 7.5%; margin-right: 2.5%;height: 70%; display:table">
