--- a/src/index.html
+++ b/src/index.html
@@ -173,7 +173,7 @@
         <div class="leftcolumn">
           <h4>Enter zip code</h4>  
           <input type="text" id="zipChosen">
-          <h4 style="margin-left: 20px;">Choose radius</h4>
+          <h4>Choose radius</h4>
           <select id="radiusSelect">
             <option value="3">3 miles</option>
             <option value="5">5 miles</option>
