--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,14 @@
   </head>
   <body>
     <div id="fullpage">
-      <div class="section" style="display: table"> 
+      <div class="section" id="firstPage" style="display: table"> 
         
         <div class = "row" style="height:50px">
           <div class="header">
             <div class="title" style="margin-left: 1.5%; margin-top: 1.5%; float: left; font-size: 56px; font-weight: 300;">Seattle Housing Prices</div>
             <div class="subtitle" style="float: left; padding-top: 36px; padding-left: 60px; opacity: .7; font-size:18px">An exploration of Seattle's housing prices</div>
           </div>
-          <img src="Seattle.jpg" id="bg" alt="">
+          <!-- <img src="Seattle.jpg" id="bg" alt=""> -->
         </div>
         
         <div class="row" style="width: 45%; margin-left: 45.5%; margin-right: 2.5%;height: 70%; display:table">
