--- a/src/index.html
+++ b/src/index.html
@@ -34,8 +34,8 @@
           <p style="font-weight: 300; font-size: 18px;">
              If you are interested in finding the best area around Seattle, Here are two of our interactive visualization tools:
           </p>
-          <a href="#final1">Zip Code Area Comparison Tool</a> <br></br>
-          <a href="#final2">Search for the best area around Seattle</a>  
+          <a href="#elevenpage">Zip Code Area Comparison Tool</a> <br></br>
+          <a href="#twelvePage">Search for the best area around Seattle</a>
                         
           </div>
         </div>
