--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
             </p>
           </br>
           <p style="font-weight: 300; font-size: 18px;">
-             If you are interested in finding the best area around Seattle, Here are two of our interactive visualization tools:
+             If you are interested in finding the best area around Seattle right away, here are two of our interactive visualization tools:
           </p>
           <a href="#elevenpage">Zip Code Area Comparison Tool</a> <br></br>
           <a href="#twelvePage">Search for the best area around Seattle</a>
