--- a/src/index.html
+++ b/src/index.html
@@ -178,8 +178,8 @@
             <option value="5">5 miles</option>
             <option value="10">10 miles</option>
           </select>
-          <button id="zipSubmit">Submit</button>
-          <button id="chooseReset">Reset</button>
+          <button id="zipSubmit" class = "btn btn-6 btn-6f">Submit</button>
+          <button id="chooseReset" class = "btn btn-7 btn-7f">Reset</button>
           <div id="map"></div>
         </div>
         <div class="rightcolumn">
@@ -208,7 +208,7 @@
             
           </div>
         </div>
-        <button type="button" id="search" style="margin-top: 80px;">Search</button>
+        <button type="button" id="search" class="btn btn-8 btn-8f" style="margin-top: 80px;">Search</button>
         <div class="three-column">
           <div id="bestZipMap" style="margin-right: 30px;"></div>
         </div>
