add visual cue for final1

--- a/src/index.html
+++ b/src/index.html
@@ -220,6 +220,20 @@
           <div id="map"></div>
         </div>
         <div class="rightcolumn">
+          
+           <p>
+            <span style="font-weight: 400">Step 1: Pick a central point (eg. university, place of work)</span> 
+        </p>
+          <p>
+          <span style="font-weight: 400">Step 2: Select the radius of your commute circle.</span> 
+       </p>
+          <p>
+        <span style="font-weight: 400">Step 3: Click on the map to compare the combined effects of factors.</span> 
+       </p>
+          <p>
+      <span style="font-weight: 400">Step 4: To de-select, simply click on the current district again. </span> 
+       </p>
+          
           <div id="compare"></div>
         </div>
       </div>
